--- a/RogueCloudServer/pom.xml
+++ b/RogueCloudServer/pom.xml
@@ -44,7 +44,7 @@
 			<version>3.1.0</version>
 			<scope>provided</scope>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-core</artifactId>
@@ -62,14 +62,14 @@
 			<artifactId>jackson-annotations</artifactId>
 			<version>2.9.0</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>au.com.codeka</groupId>
 			<artifactId>carrot</artifactId>
 			<version>2.3.0</version>
 		</dependency>
-		
-		
+
+
 
 		<!-- <dependency> <groupId>com.ibm.websphere.appserver.api</groupId> <artifactId>com.ibm.websphere.appserver.api.servlet</artifactId> 
 			<version>1.1.18</version> <scope>provided</scope> </dependency> <dependency> 
@@ -87,6 +87,19 @@
 			<artifactId>javax.websocket-api</artifactId>
 			<version>1.1</version>
 			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>javax.websocket</groupId>
+			<artifactId>javax.websocket-api</artifactId>
+			<version>1.1</version>
+			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>com.cloudant</groupId>
+			<artifactId>cloudant-client</artifactId>
+			<version>2.12.0</version>
 		</dependency>
 
 	</dependencies>
@@ -109,24 +122,10 @@
 				</configuration>
 			</plugin>
 			<!-- Plugin to run unit tests -->
-			<!-- 
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.18.1</version>
-				<executions>
-					<execution>
-						<phase>test</phase>
-						<id>default-test</id>
-						<configuration>
-							<excludes>
-								<exclude>**/it/**</exclude>
-							</excludes>
-							<reportsDirectory>${project.build.directory}/test-reports/unit</reportsDirectory>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin> -->
+			<!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-surefire-plugin</artifactId> 
+				<version>2.18.1</version> <executions> <execution> <phase>test</phase> <id>default-test</id> 
+				<configuration> <excludes> <exclude>**/it/**</exclude> </excludes> <reportsDirectory>${project.build.directory}/test-reports/unit</reportsDirectory> 
+				</configuration> </execution> </executions> </plugin> -->
 			<!-- Enable liberty-maven plugin -->
 			<plugin>
 				<groupId>net.wasdev.wlp.maven.plugins</groupId>
@@ -166,42 +165,18 @@
 						</configuration>
 					</execution>
 				</executions>
-			</plugin> 
+			</plugin>
 			<!-- Plugin to run functional tests -->
-			<!-- 
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-failsafe-plugin</artifactId>
-				<version>2.18.1</version>
-				<executions>
-					<execution>
-						<phase>integration-test</phase>
-						<id>integration-test</id>
-						<goals>
-							<goal>integration-test</goal>
-						</goals>
-						<configuration>
-							<includes>
-								<include>**/it/**</include>
-							</includes>
-							<systemPropertyVariables>
-								<liberty.test.port>${testServerHttpPort}</liberty.test.port>
-								<war.context>${warContext}</war.context>
-							</systemPropertyVariables>
-						</configuration>
-					</execution>
-					<execution>
-						<id>verify-results</id>
-						<goals>
-							<goal>verify</goal>
-						</goals>
-					</execution>
-				</executions>
-				<configuration>
-					<summaryFile>${project.build.directory}/test-reports/it/failsafe-summary.xml</summaryFile>
-					<reportsDirectory>${project.build.directory}/test-reports/it</reportsDirectory>
-				</configuration>
-			</plugin> -->
+			<!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-failsafe-plugin</artifactId> 
+				<version>2.18.1</version> <executions> <execution> <phase>integration-test</phase> 
+				<id>integration-test</id> <goals> <goal>integration-test</goal> </goals> 
+				<configuration> <includes> <include>**/it/**</include> </includes> <systemPropertyVariables> 
+				<liberty.test.port>${testServerHttpPort}</liberty.test.port> <war.context>${warContext}</war.context> 
+				</systemPropertyVariables> </configuration> </execution> <execution> <id>verify-results</id> 
+				<goals> <goal>verify</goal> </goals> </execution> </executions> <configuration> 
+				<summaryFile>${project.build.directory}/test-reports/it/failsafe-summary.xml</summaryFile> 
+				<reportsDirectory>${project.build.directory}/test-reports/it</reportsDirectory> 
+				</configuration> </plugin> -->
 		</plugins>
 		<pluginManagement>
 			<plugins>
