--- a/RogueCloudServer/kubernetes-deploy/rogue-cloud-server-icp.yaml
+++ b/RogueCloudServer/kubernetes-deploy/rogue-cloud-server-icp.yaml
@@ -12,7 +12,7 @@ spec:
     spec:
       containers:
       - name: rogue-cloud
-        image: registry.ng.bluemix.net/rogue-cloud-repo/rogue-cloud
+        image: mycluster.icp:8500/default/rogue-cloud:latest
         livenessProbe:
           httpGet:
             path: /RogueCloudServer/RogueCloudServerHealth
