--- a/RogueCloudUtilitiesCLI/.classpath
+++ b/RogueCloudUtilitiesCLI/.classpath
@@ -3,5 +3,7 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/RogueCloudShared"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/RogueCloudServer"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/RogueCloudResources"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
