--- a/helm/rogue-cloud-server/values.yaml
+++ b/helm/rogue-cloud-server/values.yaml
@@ -11,20 +11,16 @@ image:
 
 service:
   type: ClusterIP
-  port: 443
+  port: 80 
 
 ingress:
   enabled: true
   annotations: {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
-  path: /{{ .Release.Name }}/
+  path: /
   hosts:
-    - apim.px-chrisp1.apicww.cloud
-  tls: 
-    - hosts:
-      - apim.px-chrisp1.apicww.cloud
-      secretName: mgmt-platform-api-tls-c0e01e2980c081eb329284f6978abefd33bd14f891eb27a6b661f07e517c8a7c
+    - gwd.px-chrisp1.apicww.cloud
   #  - secretName: chart-example-tls
   #    hosts:
   #      - chart-example.local
