--- a/RogueCloudShared/pom.xml
+++ b/RogueCloudShared/pom.xml
@@ -14,7 +14,7 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-annotations</artifactId>
-			<version>2.9.8</version>
+			<version>[2.9.10.4,]</version>
 		</dependency>
 	</dependencies>
 	<build>
